live-initrd-sidux (0.0.2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat,  2 Dec 2006 01:35:36 +0100

live-initrd-sidux (0.0.1) unstable; urgency=low

  * Initial sidux release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat,  2 Dec 2006 01:34:08 +0100

live-initrd-kanotix (0.0.0) unstable; urgency=low

  * Initial Release.

 -- Kel Modderman <kelmo@kanotixguide.org>  Tue, 31 Oct 2006 23:15:04 +1000